--- a/LiveServer/stil.css
+++ b/LiveServer/stil.css
@@ -100,7 +100,7 @@
                     flex-direction: column;
                     border-radius: 6px;
                     background-color: hsl(199, 100%, 96%);
-                    ;
+                    flex: 1 0 auto;
                     width: 200px;
                     border-color: rgb(0, 0, 0);
                     margin: 10px;
